--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
 /* This is where styles are defined for your page. */
 /* One style is provided as example. */
+html{
+    background-image: url(images/Xanadu_on_Map_of_Asia.JPG);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+body{
+    margin: 0 auto;
+}
 
 h1 {
     color: green;
@@ -11,11 +20,29 @@ header{
 
 aside{
     background-color: aqua;
+    width: 36rem;
+    overflow: auto;
+}
+
+aside img{
+    float: right;
+    height: auto;
+    object-fit: scale-down;
+    max-height: 20em;
 }
 
 body #content{
     background-color: orange;
+    text-align: center;
+    width: 75%;
 }
+
+ul.poem{
+    list-style-type: none;
+    margin: 0;
+}
+
+
 
 .content-footer{
     background-color: lightgreen;
