--- a/styles.css
+++ b/styles.css
@@ -23,13 +23,17 @@ a {
 
 header{
     background-color: gold;
+    text-align: center;
 }
 
 aside{
-    background-color: aqua;
-    max-width: 36rem;
+    background-color: rgb(216, 151, 191, 0.4);
+    max-width: 24rem;
     width: 50%;
     overflow: auto;
+    position: fixed;
+    margin: 1rem;
+    padding: 0.5rem;
 }
 
 aside img{
@@ -37,17 +41,19 @@ aside img{
     height: auto;
     object-fit: scale-down;
     max-height: 20em;
+    margin: 12px;
 }
 
-body #content{
-    background-color: orange;
+#content{
+    background-color: rgb(236, 151, 71, 0.65);
     text-align: center;
-    width: 75%;
+    border: black solid;
 }
 
-ul.poem{
+.poem{
     list-style-type: none;
     margin: 0;
+    line-height: 1.8;
 }
 
 .content-footer{
